# Disa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  _formulas.tex  _formulas_dark.tex  adjacency__graph_8cpp.html  adjacency__graph_8cpp.js  adjacency__graph_8h.html  adjacency__graph_8h.js  adjacency__graph_8h_source.html  adjacency__graph_8hpp.html  adjacency__graph_8hpp.js  adjacency__graph_8hpp_source.html  adjacency__subgraph_8cpp.html  adjacency__subgraph_8cpp.js  adjacency__subgraph_8h.html  adjacency__subgraph_8h.js  adjacency__subgraph_8h_source.html  adjacency__subgraph_8hpp.html  adjacency__subgraph_8hpp.js  adjacency__subgraph_8hpp_source.html  annotated.html  annotated_dup.js  classDisa_1_1Adjacency__Graph-members.html  classDisa_1_1Adjacency__Subgraph-members.html  classDisa_1_1Adjacency__Subgraph.html  classDisa_1_1Direct-members.html  classDisa_1_1Matrix__Sparse-members.html  classDisa_1_1Solver-members.html  classDisa_1_1Solver__Fixed__Point-members.html  classDisa_1_1Solver__Fixed__Point.html  classDisa_1_1Solver__Fixed__Point__coll__graph.map  classDisa_1_1Solver__Fixed__Point__inherit__graph.md5  classDisa_1_1Solver__Iterative-members.html  classDisa_1_1Solver__Iterative.html  classLaplace2DProblem-members.html  (+363 more)
docs/: Conventions.md  Doxyfile  README.md  conventions.md  docsforge.yaml  index.md
html/: _formulas.tex  _formulas_dark.tex  adjacency__graph_8h_source.html  adjacency__graph_8hpp_source.html  adjacency__subgraph_8h_source.html  annotated.html  classAdjacencySubgraph.html  classDisa_1_1Adjacency__Graph-members.html  classDisa_1_1Adjacency__Graph.html  classDisa_1_1Adjacency__Subgraph-members.html  classDisa_1_1Adjacency__Subgraph.html  classDisa_1_1Direct-members.html  classDisa_1_1Direct.html  classDisa_1_1Direct__Lower__Upper__Factorisation-members.html  classDisa_1_1Direct__Lower__Upper__Factorisation.html  classDisa_1_1Direct__Lower__Upper__Factorisation__coll__graph.md5  classDisa_1_1Direct__Lower__Upper__Factorisation__inherit__graph.map  classDisa_1_1Matrix__Sparse-members.html  classDisa_1_1Matrix__Sparse.html  classDisa_1_1Matrix__Sparse__Row-members.html  classDisa_1_1Matrix__Sparse__Row.html  classDisa_1_1Solver-members.html  classDisa_1_1Solver.html  classDisa_1_1Solver__Fixed__Point-members.html  classDisa_1_1Solver__Fixed__Point.html  classDisa_1_1Solver__Iterative-members.html  classDisa_1_1Solver__Iterative.html  classLaplace2DProblem-members.html  classLaplace2DProblem.html  classLaplace2DProblem__coll__graph.md5  classLaplace2DProblem__inherit__graph.map  classLaplace2DProblem__inherit__graph.md5  classLaplace__2D-members.html  classLaplace__2D.html  classdirect__solvers-members.html  classdirect__solvers.html  classdirect__solvers__coll__graph.md5  classdirect__solvers__inherit__graph.map  classes.html  classtest__reorder-members.html  (+142 more)
include/: Macros.h  Vector.h  disa.h  macros.h  matrix_dense.h  matrix_operators.h  matrix_sparse.h  scalar.h  vector_dense.h  vector_operators.h
latex/: adjacency__graph_8h_source.tex  adjacency__graph_8hpp_source.tex  adjacency__subgraph_8h_source.tex  annotated.tex  classAdjacencySubgraph.tex  classDisa_1_1Adjacency__Graph.tex  classDisa_1_1Adjacency__Subgraph.tex  classDisa_1_1Direct.tex  classDisa_1_1Direct__Lower__Upper__Factorisation.eps  classDisa_1_1Direct__Lower__Upper__Factorisation.tex  classDisa_1_1Direct__Lower__Upper__Factorisation__coll__graph.md5  classDisa_1_1Matrix__Sparse.tex  classDisa_1_1Matrix__Sparse__Row.tex  classDisa_1_1Solver.tex  classDisa_1_1Solver__Fixed__Point.eps  classDisa_1_1Solver__Fixed__Point.tex  classDisa_1_1Solver__Fixed__Point__coll__graph.md5  classDisa_1_1Solver__Iterative.tex  classLaplace2DProblem.eps  classLaplace2DProblem.tex  classLaplace2DProblem__coll__graph.md5  classLaplace2DProblem__inherit__graph.md5  classLaplace__2D.tex  classdirect__solvers.eps  classdirect__solvers.tex  classdirect__solvers__coll__graph.md5  classdirect__solvers__inherit__graph.md5  classtest__reorder.eps  classtest__reorder.tex  classtest__reorder__coll__graph.md5  classtest__reorder__inherit__graph.md5  direct_8h_source.tex  direct__lower__upper__factorisation_8h_source.tex  direct__lower__upper__factorisation_8hpp_source.tex  disa_8h_source.tex  edge_8h_source.tex  files.tex  (+54 more)
libs/core/: CMakeLists.txt  index.h  macros.h  matrix_dense.h  matrix_sparse.cpp  matrix_sparse.h  scalar.h  vector_dense.h  vector_operators.h  vector_sparse.h
libs/core/tests/: test_matrix_dense.cpp  test_matrix_sparse.cpp  test_scalar.cpp  test_vector_dense.cpp  test_vector_operators.cpp
libs/graphing/: CMakeLists.txt  adjacency_graph.cpp  adjacency_graph.h  adjacency_graph.hpp  adjacency_subgraph.cpp  adjacency_subgraph.h  edge.h  generator.cpp  generator.h  graph.cpp  graph.h  graph_utilities.h  partition.cpp  partition.h  partitioning.h  reorder.cpp  reorder.h  reordering.h
libs/graphing/tests/: test_adjacency_graph.cpp  test_adjacency_subgraph.cpp  test_edge.cpp  test_graph.cpp  test_graph.h  test_graph_utilities.cpp  test_partition.cpp  test_reorder.cpp
libs/solver/: CMakeLists.txt  direct.h  direct_lower_upper_factorisation.h  direct_lower_upper_factorisation.hpp  solver.cpp  solver.h  solver_fixed_point.cpp  solver_fixed_point.h  solver_iterative.h  solver_utilities.h
libs/solver/test/: laplace_2d.h  test_direct.cpp
libs/solver/tests/: test_direct.cpp  test_solver.cpp
libs/solvers/: CMakeLists.txt  iterative_solvers.cpp  iterative_solvers.h  solver.cpp  solver.h  solver_fixed_point.h  solver_fixed_point.hpp  solver_iterative.cpp  solver_iterative.h  solver_type.h  solver_utilities.h  solver_utilities.hpp
libs/solvers/tests/: test_solver.cpp  test_solver_utilities.cpp
test/core/: CMakeLists.txt  test_matrix_dense.cpp  test_matrix_sparse.cpp  test_matrix_sparse_data.cpp  test_matrix_sparse_new.cpp  test_scalar.cpp  test_vector_dense.cpp  test_vector_operators.cpp
test/graph/: CMakeLists.txt  test_adjacency_graph.cpp  test_adjacency_subgraph.cpp  test_edge.cpp  test_graph_utilities.cpp  test_partition.cpp  test_reorder.cpp
(+233 files in other folders)
